--- a/ui/html/pages/view.tmpl.html
+++ b/ui/html/pages/view.tmpl.html
@@ -1,4 +1,4 @@
-{{define "title"}}Snippet #{{.ID}}{{end}}
+{{define "title"}}Snippet #{{.Snippet.ID}}{{end}}
 
 {{define "main"}}
     {{with .Snippet}}
