--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -1,7 +1,6 @@
 {{define "base"}}
 <!doctype html>
 <html lang='en'>
-
     <head>
         <meta charset='utf-8'>
         <title>{{template "title" .}} - Snippetbox</title>
@@ -18,10 +17,11 @@
         <main>
             {{template "main" .}}
         </main>
-        <footer>Powered by <a href='https://golang.org/'>Go</a></footer>
+        <footer>
+            Powered by <a href='https://golang.org/'>Go</a> in {{.CurrentYear}}
+        </footer>
 
         <script src='/static/js/main.js' type='text/javascript'></script>
     </body>
-
 </html>
 {{end}}
